module/core/test_tools/tests/inc/dynamic/namespace_does_not_exists.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `wtest_basic`
 --> tests/inc/dynamic/namespace_does_not_exists.rs:1:5
  |
1 | use wtest_basic::exposed::exposed::*;
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `wtest_basic`
  |
  = help: if you wanted to use a crate named `wtest_basic`, use `cargo add wtest_basic` to add it to your `Cargo.toml`

error: cannot find macro `tests_index` in this scope
  --> tests/inc/dynamic/namespace_does_not_exists.rs:15:1
   |
15 | tests_index!
   | ^^^^^^^^^^^
   |
help: consider importing this macro
   |
1  + use test_tools::tests_index;
   |

error: cannot find macro `tests_impls` in this scope
 --> tests/inc/dynamic/namespace_does_not_exists.rs:5:1
  |
5 | tests_impls!
  | ^^^^^^^^^^^
  |
help: consider importing this macro
  |
1 + use test_tools::tests_impls;
  |
